Changed to waypoint, longitude & latitude to match DB Waypoint configuration
