# src/server/config/swagger.json
@@ -1026,8 +1026,7 @@
       "title": "CreatePortRequest",
       "example": {
         "name": "Port sunshine",
-        "suggested_route_id": 1,
-        "waypoints": [
+        "waypoint": [
           {
             "lon": 55.65646,
             "lat": 12.53635
@@ -1039,18 +1038,14 @@
         "name": {
           "type": "string"
         },
-        "suggested_route_id": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "waypoints": {
+        "waypoint": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/Waypoint"
           }
         }
       },
-      "required": ["name", "waypoints"]
+      "required": ["name", "waypoint"]
     },
     "Waypoint": {
       "title": "Waypoint",
